--- a/Index.html
+++ b/Index.html
@@ -2,47 +2,45 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Document Scanner</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Driver's License</title>
 </head>
-
 <body>
-  <header class="header">
-    <h1 class="title">CPSI SCAN A DOC</h1>
-  </header>
+  <h1>Manual Option</h1>
+  <button onclick="window.location.href = 'Manual.html';">Manual</button>
+  <h2>Scan Driver's License</h2>
+  <form id="uploadForm" enctype="multipart/form-data">
+    <input type="file" id="myFile" />
+    <br /><br />
+    <input type="button" value="Submit" onclick="uploadFile()" />
+  </form>
 
-  <main class="main-content">
-    <p class="description">Get started by editing
-      <code class="code">homePage.html</code>. The webview will auto-refresh as you edit! (See <code
-        class="code">README.md</code> if you want to
-      disable auto-refresh.)
-    </p>
+  <script>
+    function uploadFile() {
+      var fileInput = document.getElementById('myFile');
+      var file = fileInput.files[0];
 
-    <section class="grid">
-      <a href="DL.html" class="card">
-        <h2>Drivers License &rarr;</h2>
-        <p>Click here to scan and edit your document</p>
-      </a>
+      if (file) {
+        var formData = new FormData();
+        formData.append('file', file);
 
-      <a href="Insurance.html" class="card">
-        <h2>Insurance Card &rarr;</h2>
-        <p>Click here to scan and edit your Insurance Card</p>
-      </a>
-    </section>
-
-  </main>
-
-  <script type="module" src="script.js"></script>
-
-
-
-  <!--
-    This script places a badge on your repl's full-browser view back to your repl's cover
-    page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-    teal, blue, blurple, magenta, pink!
-  -->
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
+        fetch('https://your-power-automate-endpoint', {
+          method: 'POST',
+          body: formData
+        })
+        .then(response => response.json())
+        .then(data => {
+          console.log('File uploaded successfully:', data);
+          // Handle success, if needed
+        })
+        .catch(error => {
+          console.error('Error uploading file:', error);
+          // Handle error, if needed
+        });
+      } else {
+        console.error('No file selected.');
+        // Handle no file selected, if needed
+      }
+    }
+  </script>
 </body>
-
 </html>
