--- a/DL.html
+++ b/DL.html
@@ -1,46 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Driver's License</title>
-</head>
-<body>
-  <h1>Manual Option</h1>
-  <button onclick="window.location.href = 'Manual.html';">Manual</button>
-  <h2>Scan Driver's License</h2>
-  <form id="uploadForm" enctype="multipart/form-data">
-    <input type="file" id="myFile" />
-    <br /><br />
-    <input type="button" value="Submit" onclick="uploadFile()" />
-  </form>
-
-  <script>
-    function uploadFile() {
-      var fileInput = document.getElementById('myFile');
-      var file = fileInput.files[0];
-
-      if (file) {
-        var formData = new FormData();
-        formData.append('file', file);
-
-        fetch('https://your-power-automate-endpoint', {
-          method: 'POST',
-          body: formData
-        })
-        .then(response => response.json())
-        .then(data => {
-          console.log('File uploaded successfully:', data);
-          // Handle success, if needed
-        })
-        .catch(error => {
-          console.error('Error uploading file:', error);
-          // Handle error, if needed
-        });
-      } else {
-        console.error('No file selected.');
-        // Handle no file selected, if needed
-      }
-    }
-  </script>
-</body>
+<!doctype html>
+<html>
+  <header class="header">
+    <link rel="stylesheet" href="style.css" />
+    <h1 class="title">Driver License</h1>
+  </header>
+  <body>
+    <h1>Manual Option</h1>
+    <button onclick="window.location.href = 'Manual.html';">Manual</button>
+    <h1>Scan Driver's License</h1>
+    <input class="jimmy" type="file" /> <br /><br />
+    <input class="submit" type="submit" value="submit" />
+  </body>
 </html>
