--- a/DL.html
+++ b/DL.html
@@ -9,8 +9,8 @@
     body {
       font-family: Arial, sans-serif;
       padding: 10px;
-      max-width: 600px;
-      margin: auto;
+      margin: 0;
+      box-sizing: border-box;
     }
 
     .header {
@@ -29,6 +29,14 @@
       width: 100%;
       padding: 10px;
       margin-top: 10px;
+    }
+
+    @media (min-width: 600px) {
+      /* Adjust styles for larger screens (PC) */
+      body {
+        max-width: 600px;
+        margin: auto;
+      }
     }
   </style>
 </head>
