--- a/DL.html
+++ b/DL.html
@@ -1,53 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Driver License</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 10px;
-      margin: 0;
-      box-sizing: border-box;
-    }
-
-    .header {
-      text-align: center;
-    }
-
-    .title {
-      margin: 10px 0;
-    }
-
-    h1 {
-      margin-top: 20px;
-    }
-
-    button, input {
-      width: 100%;
-      padding: 10px;
-      margin-top: 10px;
-    }
-
-    @media (min-width: 600px) {
-      /* Adjust styles for larger screens (PC) */
-      body {
-        max-width: 600px;
-        margin: auto;
-      }
-    }
-  </style>
-</head>
-<body>
+<!doctype html>
+<html>
   <header class="header">
+    <link rel="stylesheet" href="style.css" />
     <h1 class="title">Driver License</h1>
   </header>
-  <h1>Manual Option</h1>
-  <button onclick="window.location.href = 'Manual.html';">Manual</button>
-  <h1>Scan Driver's License</h1>
-  <input class="jimmy" type="file" /><br /><br />
-  <input class="submit" type="submit" value="Submit" />
-</body>
+  <body>
+    <h1>Manual Option</h1>
+    <button onclick="window.location.href = 'Manual.html';">Manual</button>
+    <h1>Scan Driver's License</h1>
+    <input class="jimmy" type="file" /> <br /><br />
+    <input class="submit" type="submit" value="submit" />
+  </body>
 </html>
+
