--- a/DL.html
+++ b/DL.html
@@ -50,8 +50,9 @@ $.ajax({
   success: function (data) {
     console.log(data);
   },
-  error: function (error) {
-    console.log("Error: " + JSON.stringify(error));
+  error: function (xhr, status, error) {
+    console.error("Error: " + status + " - " + error);
+    console.log(xhr.responseText);
   }
 });
     }
