--- a/DL.html
+++ b/DL.html
@@ -12,6 +12,17 @@
       padding: 0;
     }
 
+    .header {
+      background-color: #333;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+
+    .title {
+      margin: 0;
+    }
+
     .container {
       max-width: 500px;
       margin: 50px auto;
@@ -50,6 +61,10 @@
 
     button[type="submit"]:hover {
       background-color: #45a049;
+    }
+
+    .jimmy {
+      /* Add any styles specific to the jimmy class */
     }
   </style>
 </head>
