--- a/DL.html
+++ b/DL.html
@@ -73,15 +73,10 @@
     <h1 class="title">Driver License</h1>
   </header>
   
-  <h1>Manual Option</h1>
-  <button id="manualButton">Manual</button>
-  
-  <h1>Scan Driver's License</h1>
-  <input class="jimmy" type="file"> <br><br>
-
   <div class="container">
     <h1>Customized Form</h1>
-    <form id="myForm">
+    <form id="myForm" enctype="multipart/form-data">
+      <input type="file" name="attachment" id="attachment">
       <input type="text" name="firstName" placeholder="First Name">
       <input type="text" name="lastName" placeholder="Last Name">
       <button type="submit">Submit</button>
@@ -91,21 +86,14 @@
   <script>
     document.getElementById('myForm').addEventListener('submit', function(event) {
       event.preventDefault(); // Prevent default form submission
-      
+
       // Construct form data
       const formData = new FormData(this);
-      const data = {};
-      formData.forEach((value, key) => {
-        data[key] = value;
-      });
-
+      
       // Send form data to Power Automate
       fetch('https://prod-191.westus.logic.azure.com:443/workflows/c2537bf7bc454b2ea998dd4f214b6300/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=hDud5itQ7lVz9MKy8KvOhENDrZkLwIxjkwIriEWSKpk', {
         method: 'POST',
-        body: JSON.stringify(data),
-        headers: {
-          'Content-Type': 'application/json'
-        }
+        body: formData,
       })
       .then(response => {
         if (response.ok) {
@@ -117,10 +105,6 @@
       .catch(error => {
         console.error('Error sending form data:', error);
       });
-    });
-
-    document.getElementById('manualButton').addEventListener('click', function() {
-      window.location.href = 'Manual.html';
     });
   </script>
 </body>
