--- a/DL.html
+++ b/DL.html
@@ -98,7 +98,7 @@
       .then(response => {
         if (response.ok) {
           console.log('Form data sent successfully!');
-          window.location.href = "Validate.html"; // Redirect to next page
+          window.location.href = "Manual.html"; // Redirect to next page
         } else {
           console.error('Failed to send form data.');
         }
