--- a/Validate.html
+++ b/Validate.html
@@ -62,11 +62,11 @@
             return { firstName, lastName, dob, address };
         }
 
-        function displayStoredData() {
-            var { firstName, lastName, dob, address } = getStoredData();
-            var displayText = `First Name: ${firstName}<br>Last Name: ${lastName}<br>Date of Birth: ${dob}<br>Address: ${address}`;
-            document.getElementById('displayInfo').innerHTML = displayText;
-        }
+      //  function displayStoredData() {
+          //  var { firstName, lastName, dob, address } = getStoredData();
+         //   var displayText = `First Name: ${firstName}<br>Last Name: ${lastName}<br>Date of Birth: ${dob}<br>Address: ${address}`;
+          //  document.getElementById('displayInfo').innerHTML = displayText;
+    //    }
 
         function goBack() {
             window.location.href = 'Manual.html';
