--- a/Validate.html
+++ b/Validate.html
@@ -21,7 +21,7 @@
             align-items: center;
         }
 
-        #displayInfo {
+        #displayNames, #displayDob, #displayAddress {
             color: #777; /* Grey color for answers */
             margin-bottom: 15px;
         }
@@ -47,7 +47,9 @@
 <body>
     <main class="main-content">
         <h2>Submitted Information:</h2>
-        <div id="displayInfo"></div>
+        <div id="displayNames"></div>
+        <div id="displayDob"></div>
+        <div id="displayAddress"></div>
 
         <button onclick="goBack()">Back</button>
         <button onclick="validate()">Validate</button>
@@ -62,11 +64,12 @@
             return { firstName, lastName, dob, address };
         }
 
-      //  function displayStoredData() {
-          //  var { firstName, lastName, dob, address } = getStoredData();
-         //   var displayText = `First Name: ${firstName}<br>Last Name: ${lastName}<br>Date of Birth: ${dob}<br>Address: ${address}`;
-          //  document.getElementById('displayInfo').innerHTML = displayText;
-    //    }
+        function displayStoredData() {
+            var { firstName, lastName, dob, address } = getStoredData();
+            document.getElementById('displayNames').innerText = `First Name: ${firstName}\nLast Name: ${lastName}`;
+            document.getElementById('displayDob').innerText = `Date of Birth: ${dob}`;
+            document.getElementById('displayAddress').innerText = `Address: ${address}`;
+        }
 
         function goBack() {
             window.location.href = 'Manual.html';
