--- a/Validate.html
+++ b/Validate.html
@@ -51,7 +51,7 @@
         <div id="displayDob"></div>
         <div id="displayAddress"></div>
 
-        <button onclick="goBack()">Back</button>
+        <button onclick="Edit()">Edit</button>
         <button onclick="validate()">Validate</button>
     </main>
 
@@ -71,7 +71,7 @@
             document.getElementById('displayAddress').innerText = `Address: ${address}`;
         }
 
-        function goBack() {
+        function Edit() {
             window.location.href = 'Manual.html';
         }
 
