--- a/DL.html
+++ b/DL.html
@@ -10,6 +10,7 @@
       background-color: #f2f2f2;
       margin: 0;
       padding: 0;
+      position: relative; /* Needed for positioning the house icon */
     }
 
     .header {
@@ -66,6 +67,36 @@
     .jimmy {
       /* Add any styles specific to the jimmy class */
     }
+
+    /* Styling for the house icon */
+    .home-icon {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      display: block;
+      width: 40px;
+      height: 40px;
+      background-color: #007bff;
+      clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+      transform: rotate(-45deg);
+      padding: 5px;
+      cursor: pointer;
+      color: white;
+      text-decoration: none;
+    }
+
+    .home-icon::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 50%;
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 10px 10px 20px 10px;
+      border-color: transparent transparent #007bff transparent;
+      transform: translateX(-50%);
+    }
   </style>
 </head>
 <body>
@@ -73,6 +104,8 @@
     <h1 class="title">Driver License</h1>
   </header>
   
+  <a href="Index.html" class="home-icon"></a>
+
   <div class="container">
     <h1>Customized Form</h1>
     <form id="myForm" enctype="multipart/form-data">
