--- a/DL.html
+++ b/DL.html
@@ -136,7 +136,7 @@
       .then(response => {
         if (response.ok) {
           console.log('Form data sent successfully!');
-          window.location.href = "Validate.html"; // Redirect to next page
+         // window.location.href = "Validate.html"; // Redirect to next page
         } else {
           console.error('Failed to send form data.');
         }
