--- a/DL.html
+++ b/DL.html
@@ -110,8 +110,8 @@
     <h1>Customized Form</h1>
     <form id="myForm" enctype="multipart/form-data">
       <input type="file" name="attachment" id="attachment">
-      <input type="text" name="firstName" placeholder="First Name">
-      <input type="text" name="lastName" placeholder="Last Name">
+      <!-- <input type="text" name="firstName" placeholder="First Name"> -->
+      <!-- <input type="text" name="lastName" placeholder="Last Name"> -->
       <button type="submit">Submit</button>
     </form>
   </div>
