--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
       margin: 0;
       padding: 0;
+      background: linear-gradient(to bottom, #0070e0, #0050a0);
     }
     .container {
       max-width: 800px;
