--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: linear-gradient(to bottom, #0070e0, #0050a0);
+      background: linear-gradient(to bottom, FF00FF, #0050a0);
     }
     .container {
       max-width: 800px;
