--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: linear-gradient(to bottom right, #FF00FF, #0050a0);
+      background: linear-gradient(to bottom right, #FF00FF, #0050a0,#87CEEB,#0050a0,#FF00FF);
     }
     .container {
       max-width: 800px;
