--- a/index.html
+++ b/index.html
@@ -3,7 +3,80 @@
 <head>
   <meta charset="utf-8">
   <title>Driver's License</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(to bottom right, #FF00FF, #0050a0,#87CEEB,#0050a0,#FF00FF);
+    }
+    .container {
+      max-width: 800px;
+      margin: 20px auto;
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+    }
+    h1, h2 {
+      text-align: center;
+    }
+    .button-container {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .button {
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #0070e0;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    .button:hover {
+      background-color: #0050a0;
+    }
+    #myFile {
+      display: none;
+    }
+    label {
+      display: block;
+      margin-bottom: 10px;
+      text-align: center;
+      padding: 10px 0;
+      background-color: #f0f0f0;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    label:hover {
+      background-color: #e0e0e0;
+    }
+    input[type="button"] {
+      display: block;
+      margin: 0 auto;
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #0070e0;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    input[type="button"]:hover {
+      background-color: #0050a0;
+    }
+    .drag-over-effect {
+      border: 2px dashed #0070e0;
+    }
+    .file-icon {
+      width: 50px;
+      height: 50px;
+    }
+  </style>
 </head>
 <body>
   <div class="container" id="dropArea">
@@ -17,6 +90,80 @@
     <input type="button" value="Upload" onclick="uploadFile()" />
   </div>
 
-  <script src="script.js"></script>
+  <script>
+    function uploadFile() {
+      var fileInput = document.getElementById('myFile');
+      var file = fileInput.files[0];
+
+      if (file) {
+        var formData = new FormData();
+        formData.append('file', file);
+
+        fetch('https://your-power-automate-endpoint', {
+          method: 'POST',
+          body: formData
+        })
+        .then(response => response.json())
+        .then(data => {
+          console.log('File uploaded successfully:', data);
+          // Handle success, if needed
+        })
+        .catch(error => {
+          console.error('Error uploading file:', error);
+          // Handle error, if needed
+        });
+      } else {
+        console.error('No file selected.');
+        // Handle no file selected, if needed
+      }
+    }
+
+    var dropArea = document.getElementById('dropArea');
+
+    // Drag over
+    dropArea.ondragover = (e) => {
+      e.preventDefault();
+      dropArea.classList.add('drag-over-effect');
+    }
+
+    // Drag leave
+    dropArea.ondragleave = () => {
+      dropArea.classList.remove('drag-over-effect');
+    }
+
+    // Drop
+    dropArea.ondrop = (e) => {
+      e.preventDefault();
+      dropArea.classList.remove('drag-over-effect');
+      if(e.dataTransfer.items){
+          [...e.dataTransfer.items].forEach((item) => {
+              if(item.kind === 'file'){
+                  const file = item.getAsFile();
+                  if(typeValidation(file.type)){
+                      uploadFile(file)
+                  }
+              }
+          })
+      }else{
+          [...e.dataTransfer.files].forEach((file) => {
+              if(typeValidation(file.type)){
+                  uploadFile(file)
+              }
+          })
+      }
+    }
+
+    // Function to validate file type
+    function typeValidation(fileType) {
+      // Implement your file type validation logic here
+      return true; // Example: Always return true for demonstration purposes
+    }
+
+    // Function to find icon for file
+    function iconSelector(type) {
+      var splitType = (type.split('/')[0] == 'application') ? type.split('/')[1] : type.split('/')[0];
+      return splitType + '.png';
+    }
+  </script>
 </body>
 </html>
