--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Driver's License</title>
   <style>
+    /* CSS styles */
     body {
       font-family: Arial, sans-serif;
       margin: 0;
