--- a/Manual.html
+++ b/Manual.html
@@ -112,7 +112,7 @@
         }
 
         function goBack() {
-            window.location.href = 'homePage.html'; // Update the file name here
+            window.location.href = 'index.html'; // Update the file name here
         }
     </script>
 </body>
