--- a/Validate.html
+++ b/Validate.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Display Information</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         body {
             text-align: center;
             margin-top: 50px;
-            background-color: #f4f4f4; /* Light gray background */
-            color: #333; /* Dark text color */
         }
 
         .main-content {
